--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "element-plus": "^1.2.0-beta.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "swiper": "^7.4.1",
+    "echarts": "4.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
